Fixes sign in button wrapping

--- a/src/styles/NewsletterHeader.module.css
+++ b/src/styles/NewsletterHeader.module.css
@@ -71,6 +71,7 @@
     padding: 0 1em;
     font-weight: bold;
     cursor: pointer;
+    white-space: nowrap;
 }
 
 #subscribeButton {
